--- a/style.css
+++ b/style.css
@@ -17,14 +17,21 @@ h2 {
 nav {
     background-color: aquamarine;
 }
-.para {
+
+ #btnA #btnB{
+    margin-left: 30px;
+    background-color: darkslateblue;
+    
+     
+ }
+
+ .para {
     font-family: 'Times New Roman', Times, serif;
     
    
     padding-left: 100px;
-}
- #btnA #btnB{
-    margin-left: 30px;
+
     
-     
+    background-color: lightblue;
+    transition: background-color 0.3s ease;
  }
