best btn method

--- a/style.css
+++ b/style.css
@@ -3,35 +3,53 @@ body {
     background-color: bisque;
 
 }
+
 h2 {
     margin-left: 100px;
     padding-top: 50px;
     color: darkgreen;
     font-family: 'Times New Roman', Times, serif;
 }
-.thead{
+
+.thead {
     padding-left: 100px;
-   
+
 
 }
+
 nav {
     background-color: aquamarine;
 }
 
- #btnA #btnB{
+#btnA #btnB {
     margin-left: 30px;
     background-color: darkslateblue;
-    
-     
- }
 
- .para {
-    font-family: 'Times New Roman', Times, serif;
-    
-   
+
+}
+
+.para {
+    max-width: 800px;
+
+    text-align: justify;
     padding-left: 100px;
+    padding-right: 100px;
+    font-size: x-large;
 
-    
+
     background-color: lightblue;
     transition: background-color 0.3s ease;
- }
+}
+
+
+#tog {
+    display: block;
+}
+
+.homeSp {
+    display: none;
+}
+
+.homeSp.visible {
+    display: block;
+}
